--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -258,3 +258,15 @@ label.asdndzone{
 ul, ol{
   list-style-type: none !important;
 }
+
+
+.no-recent-data {
+    height: 300px;
+    width: 100%;
+    text-align: center;
+    color: #999;
+    line-height: 300px;
+    font-size: 14px;
+    word-wrap: break-word;
+    font-family: 'Lucida Grande', 'Lucida Sans Unicode', Verdana, Arial, Helvetica, sans-serif;
+}
