--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -28,7 +28,7 @@
           <div class="card-body row">
             <% @payment_methods.each do |payment|%>
               <div class="col-md-3 col-sm-6 col-12">
-                <%= link_to({controller: "payment_transactions", action: "new", invoice_id: params[:invoice_id], payment_method_id: payment.id} ) do%>
+                <%= link_to({controller: "payment_transactions", action: "new", invoice_id: params[:invoice_id], payment_method_id: payment.id}, data: { turbolinks: false }) do%>
                   <div class="card" style="width: 15rem;">
                     <%= image_tag(payment.bank_logo, class: "card-img-top")%>
                     <ul class="list-group list-group-flush">
