--- a/app/views/students/registrations/_emergency.html.erb
+++ b/app/views/students/registrations/_emergency.html.erb
@@ -16,7 +16,7 @@
 
     </div>
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :name_of_current_employer, input_html: { class: 'form-control', autocomplete: "name_of_current_employer" },placeholder: "Name of current employer", required: true %>
+      <%= a.input :name_of_current_employer, input_html: { class: 'form-control', autocomplete: "name_of_current_employer" },placeholder: "Name of current employer"%>
       <%= f.hint "Contact person current employer name"%>
     </div>
     <div class="col-12 col-md-6 form-group">
@@ -24,7 +24,7 @@
       <%= f.hint "Contact person current employer email"%>
     </div>
     <div class="col-12 col-md-6 form-group">
-      <%= a.input :office_phone_number, input_html: { class: 'form-control', 'data-inputmask'=>'"mask": "(+251) 999-999999"' },placeholder: "office phone number", required: true, label: "Employer Phone Number"%>
+      <%= a.input :office_phone_number, input_html: { class: 'form-control', 'data-inputmask'=>'"mask": "(+251) 999-999999"' },placeholder: "office phone number", label: "Employer Phone Number"%>
       <%= f.hint "Contact person current employer phone number"%>
     </div>
     <div class="col-12 col-md-6 form-group">
