--- a/app/views/pages/_instruction.html.erb
+++ b/app/views/pages/_instruction.html.erb
@@ -31,8 +31,7 @@
         <div class="card-header">
           <h3 class="card-title">
             <i class="fas fa-info-circle mr-2"></i>
-            <strong>Instruction</strong>
-
+            <strong>Instructions</strong>
           </h3>
           <div class="card-tools">
             <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -223,6 +222,7 @@
         <!-- /.card-body -->
       </div>
     </div>
+  <%else%>
   <%end%>
 <%else%>
   <%= render 'student_id'%>
